<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity" >

    <TextView
        android:id="@+id/titre"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp"
        android:text="@string/titre_principale"
        android:textSize="20sp"
      	android:textStyle="italic|bold"
      	 />

    <Button
        android:id="@+id/voirRecherche"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/ajoutRecherche"
        android:layout_centerHorizontal="true"
        android:text="@string/voir_mes_recherches" 
        android:width="200dp"
        />

    <Button
        android:id="@+id/ajoutRecherche"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/imageSansFils"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:width="200dp"
        android:text="@string/ajout_recherche" />

    <ImageView
        android:id="@+id/imageSansFils"
        android:layout_width="80sp"
        android:layout_height="80sp"
        android:layout_below="@+id/titre"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:src="@drawable/wifi_lg" 
        android:contentDescription="@string/image_content_description"
        />

    
     <Button
        android:id="@+id/actualiserListeBluetooth"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/voirRecherche"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:width="200dp"
        android:text="Actualiser la liste des peripheriques" />
    <TextView
        android:id="@+id/textViewTextListBluetooth"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/actualiserListeBluetooth"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:text="Liste des peripheriques bluetooth :" />

</RelativeLayout>